if(EZ_TARGET_ANDROID)
	add_subdirectory(android)
endif()
if(EZ_TARGET_DARWIN)
	add_subdirectory(darwin)
endif()
if(EZ_TARGET_FREEBSD)
	add_subdirectory(freebsd)
endif()
if(EZ_TARGET_LINUX)
	add_subdirectory(linux)
endif()
if(EZ_TARGET_POSIX OR EZ_TARGET_WINDOWS)
	add_subdirectory(posix)
endif()
if(EZ_TARGET_WINDOWS)
	add_subdirectory(windows)
endif()